@@ -1,3 +1,7 @@
+2020-11-16  James K. Lowden  <jklowden@symas.com>
+
+	* common.c (cob_init): set LIBC_FATAL_STDERR_ to prevent glibc
+	  from writing stack traces to /dev/tty.
 
 2020-11-01  Ron Norman <rjn@inglenet.com>
 
